--- a/src/layouts/styles/style.css
+++ b/src/layouts/styles/style.css
@@ -1,94 +1,98 @@
 .hero {
-    height: 80vh;
-    color: white;
+  height: 80vh;
+  color: white;
+}
+
+.bg-dark {
+  background-color: #263238;
 }
 
 .mouseicon {
-    height: 20vh;
-    margin-bottom: 50px;
+  height: 20vh;
+  margin-bottom: 50px;
 }
 
 .round-btn a {
-    margin-left: 5px;
-    margin-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .icon-btn {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .parallaxbg {
-    max-height: 100px;
+  max-height: 100px;
 }
 
 .footer {
-    height: 100vh;
+  height: 100vh;
 }
 
 /* ===================font========================== */
 
 .masthead-font .h1 {
-    text-shadow: 0px 0px 1px #000;
+  text-shadow: 0px 0px 1px #000;
 }
 
 .masthead-font .p {
-    font-weight: 300;
-    text-shadow: 0px 0px 8px #000;
+  font-weight: 300;
+  text-shadow: 0px 0px 8px #000;
 }
 
 @media (max-width: 576px) {
-    .masthead-font .h1 {
-        font-size: 2rem;
-    }
-    .masthead-font .p {
-        font-size: 1rem;
-    }
-    .mb-4 {
-        margin: 2em;
-    }
+  .masthead-font .h1 {
+    font-size: 2rem;
+  }
+  .masthead-font .p {
+    font-size: 1rem;
+  }
+  .mb-4 {
+    margin: 2em;
+  }
 }
 
 @media (min-width: 576px) {
-    .masthead-font .h1 {
-        font-size: 2.2rem;
-    }
-    .masthead-font .p {
-        font-size: 1.15rem;
-    }
-    .mb-4 {
-        margin: 2.5em;
-    }
+  .masthead-font .h1 {
+    font-size: 2.2rem;
+  }
+  .masthead-font .p {
+    font-size: 1.15rem;
+  }
+  .mb-4 {
+    margin: 2.5em;
+  }
 }
 
 @media (min-width: 768px) {
-    .masthead-font .h1 {
-        font-size: 3rem;
-    }
-    .masthead-font .p {
-        font-size: 1.4rem;
-    }
-    .mb-4 {
-        margin: 3em;
-    }
+  .masthead-font .h1 {
+    font-size: 3rem;
+  }
+  .masthead-font .p {
+    font-size: 1.4rem;
+  }
+  .mb-4 {
+    margin: 3em;
+  }
 }
 
 @media (min-width: 992px) {
-    .masthead-font .h1 {
-        font-size: 3.5rem;
-    }
-    .masthead-font .p {
-        font-size: 1.6rem;
-    }
-    .mb-4 {
-        margin: 4em;
-    }
+  .masthead-font .h1 {
+    font-size: 3.5rem;
+  }
+  .masthead-font .p {
+    font-size: 1.6rem;
+  }
+  .mb-4 {
+    margin: 4em;
+  }
 }
 
 @media (min-width: 1200px) {
-    .masthead-font .h1 {
-        font-size: 4.5rem;
-    }
-    .masthead-font .p {
-        font-size: 1.8rem;
-    }
+  .masthead-font .h1 {
+    font-size: 4.5rem;
+  }
+  .masthead-font .p {
+    font-size: 1.8rem;
+  }
 }
